--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Top of root</h1>
+    <!-- <h1>Top of root</h1> -->
     <div id="root">
         <!-- after Refresh => React will work inside root it will change any type of content inside root and outside it work like html-->
         <h1>Rohit</h1> 
     </div>
-    <h2>Below of root</h2>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+     <!-- <h2>Below of root</h2> -->
+<!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>  -->
 <!-- <script>
     const heading=React.createElement("h1",{},"Hello from React")
     const root=ReactDOM.createRoot(document.getElementById("root"))
     root.render(heading);
 </script> -->
 
-<script src="./App.js">
+
+<!-- <script type="module" src="./App.js"></script> -->
+<script type="module" src="./App1.js">
 
 </script>
 </body>
